<resources>
    <string name="app_name">DaiApp</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="masuk">Masuk</string>
    <string name="atau">Atau</string>
    <string name="daftar">Daftar</string>
    <string name="welcome">Selamat Datang</string>
    <string name="email">Email</string>
    <string name="no_hp">No.HP</string>
    <string name="cari_dai">Cari Dai</string>
    <string name="temukan">Temukan</string>
    <string name="akun">Akun</string>
</resources>